Added workouts to the logged in title bar.

--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -20,6 +20,7 @@
           <ul class="nav nav-pills pull-right">
             <%= if @conn.assigns.current_user do %>
               <li><%= link "Home", to: page_path(@conn, :index) %></li>
+              <li><%= link "Workouts", to: workout_path(@conn, :index) %></li>
               <li><%= link "Logout", to: session_path(@conn, :delete) %></li>
             <% else %>
               <li><%= link "Login",    to: "/login" %></li>
