--- a/web/templates/workout/new.html.eex
+++ b/web/templates/workout/new.html.eex
@@ -1,6 +1,8 @@
-<h2>New workout</h2>
+<div class="container">
+  <h2>New workout</h2>
 
-<%= render "form.html", changeset: @changeset,
+  <%= render "form.html", changeset: @changeset,
                         action: workout_path(@conn, :create) %>
 
-<%= link "Back", to: workout_path(@conn, :index) %>
+  <%= link "Back", to: workout_path(@conn, :index) %>
+</div>
