--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -13,7 +13,7 @@
 
   <body>
 
-    <header class="header">
+    <header class="navbar-colored navbar-inverse">
       <div class="container">
         <nav role="navigation">
           <a class="navbar-brand">TriHard</a>
