--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -28,7 +28,6 @@
 
 
 <%= else %>
-
 <div class="section header-themeblue">
   <div class="container">
     <div class="jumbotron header-themeblue">
@@ -39,7 +38,7 @@
           <a href="<%= registration_path(@conn, :new) %>" class="btn btn-default btn-block">Sign Up</a>
         </div>
         <div class="col-sm-4 col-sm-offset-1">
-          <a href="<%= session_path(@conn, :new) %>" class="btn btn-default btn-block">Login</a>
+          <button type="button" class="btn btn-default btn-block" data-toggle="modal" data-target="#myModal">Login</button>
         </div>
       </div>
     </div>
@@ -66,6 +65,25 @@
     <div class="col-md-6">
       <h2>Get Great Stats</h2>
       <p>Trihard makes it easy to track your improvement over time. You can compare your distance and times with how you were during last week or last month. Named workouts even let you compare individual workouts with the last time you did them.</p>
+    </div>
+  </div>
+</div>
+
+<!-- Login Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Login</h4>
+      </div>
+      <div class="modal-body">
+      <div id="elm-main"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
     </div>
   </div>
 </div>
