--- a/web/templates/workout/edit.html.eex
+++ b/web/templates/workout/edit.html.eex
@@ -1,6 +1,8 @@
-<h2>Edit workout</h2>
+<div class="container">
+  <h2>Edit workout</h2>
 
-<%= render "form.html", changeset: @changeset,
-                        action: workout_path(@conn, :update, @workout) %>
+  <%= render "form.html", changeset: @changeset,
+                          action: workout_path(@conn, :update, @workout) %>
 
-<%= link "Back", to: workout_path(@conn, :index) %>
+  <%= link "Back", to: workout_path(@conn, :index) %>
+</div>
