--- a/web/templates/workout/form.html.eex
+++ b/web/templates/workout/form.html.eex
@@ -17,28 +17,53 @@
     <%= error_tag f, :name %>
   </div>
 
-  <%= inputs_for f, :exercises, fn fe -> %>
-    <hr>
-    <h3><%= field_value(fe, :type) |> String.capitalize() %></h3>
-    <%= hidden_input fe, :type %>
-    <%= error_tag fe, :type %>
+  <div class="row">
+    <div class="col-md-4">
+      <h3>Swim</h3>
+      <div class="form-group">
+        <%= label f, :swim_distance, class: "control-label" %>
+        <%= text_input f, :swim_distance, class: "form-control" %>
+        <%= error_tag f, :swim_distance %>
+      </div>
 
-    <div class="checkbox">
-      <label><%= checkbox fe, :present %> Present</label>
+      <div class="form-group">
+        <%= label f, :swim_time, class: "control-label" %>
+        <%= text_input f, :swim_time, class: "form-control" %>
+        <%= error_tag f, :swim_time %>
+      </div>
     </div>
 
-    <div class="form-group">
-      <%= label fe, :distance, class: "control-label" %>
-      <%= text_input fe, :distance, class: "form-control" %>
-      <%= error_tag fe, :distance %>
+    <div class="col-md-4">
+      <h3>Bike</h3>
+      <div class="form-group">
+        <%= label f, :bike_distance, class: "control-label" %>
+        <%= text_input f, :bike_distance, class: "form-control" %>
+        <%= error_tag f, :bike_distance %>
+      </div>
+
+      <div class="form-group">
+        <%= label f, :bike_time, class: "control-label" %>
+        <%= text_input f, :bike_time, class: "form-control" %>
+        <%= error_tag f, :bike_time %>
+      </div>
     </div>
 
-    <div class="form-group">
-      <%= label fe, :seconds, class: "control-label" %>
-      <%= text_input fe, :seconds, class: "form-control" %>
-      <%= error_tag fe, :seconds %>
+    <div class="col-md-4">
+      <h3>Run</h3>
+      <div class="form-group">
+        <%= label f, :run_distance, class: "control-label" %>
+        <%= text_input f, :run_distance, class: "form-control" %>
+        <%= error_tag f, :run_distance %>
+      </div>
+
+      <div class="form-group">
+        <%= label f, :run_time, class: "control-label" %>
+        <%= text_input f, :run_time, class: "form-control" %>
+        <%= error_tag f, :run_time %>
+      </div>
     </div>
-  <% end %>
+  </div>
+
   <hr>
   <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
