--- a/web/templates/workout/form.html.eex
+++ b/web/templates/workout/form.html.eex
@@ -21,20 +21,18 @@
     <div class="col-md-4">
       <h3>Swim</h3>
       <div class="form-group">
-        <%= label f, :swim_distance, class: "control-label" %>
+        <label class="control-label" for="workout_swim_distance">Distance (yards)</label>
         <%= text_input f, :swim_distance, class: "form-control" %>
         <%= error_tag f, :swim_distance %>
       </div>
 
       <div class="row">
         <div class="form-group col-md-6">
-          <%= label f, :swim_minutes, class: "control-label" %>
-          <%= text_input f, :swim_minutes, class: "form-control" %>
+          <%= text_input f, :swim_minutes, class: "form-control", placeholder: "Minutes" %>
           <%= error_tag f, :swim_minutes %>
         </div>
         <div class="form-group col-md-6">
-          <%= label f, :swim_seconds, class: "control-label" %>
-          <%= text_input f, :swim_seconds, class: "form-control" %>
+          <%= text_input f, :swim_seconds, class: "form-control", placeholder: "Seconds" %>
           <%= error_tag f, :swim_seconds %>
         </div>
       </div>
@@ -43,20 +41,18 @@
     <div class="col-md-4">
       <h3>Bike</h3>
       <div class="form-group">
-        <%= label f, :bike_distance, class: "control-label" %>
+        <label class="control-label" for="workout_bike_distance">Distance (miles)</label>
         <%= text_input f, :bike_distance, class: "form-control" %>
         <%= error_tag f, :bike_distance %>
       </div>
 
       <div class="row">
         <div class="form-group col-md-6">
-          <%= label f, :bike_minutes, class: "control-label" %>
-          <%= text_input f, :bike_minutes, class: "form-control" %>
+          <%= text_input f, :bike_minutes, class: "form-control", placeholder: "Minutes" %>
           <%= error_tag f, :bike_minutes %>
         </div>
         <div class="form-group col-md-6">
-          <%= label f, :bike_seconds, class: "control-label" %>
-          <%= text_input f, :bike_seconds, class: "form-control" %>
+          <%= text_input f, :bike_seconds, class: "form-control", placeholder: "Seconds" %>
           <%= error_tag f, :bike_seconds %>
         </div>
       </div>
@@ -65,20 +61,18 @@
     <div class="col-md-4">
       <h3>Run</h3>
       <div class="form-group">
-        <%= label f, :run_distance, class: "control-label" %>
+        <label class="control-label" for="workout_run_distance">Distance (miles)</label>
         <%= text_input f, :run_distance, class: "form-control" %>
         <%= error_tag f, :run_distance %>
       </div>
 
       <div class="row">
         <div class="form-group col-md-6">
-          <%= label f, :run_minutes, class: "control-label" %>
-          <%= text_input f, :run_minutes, class: "form-control" %>
+          <%= text_input f, :run_minutes, class: "form-control", placeholder: "Minutes" %>
           <%= error_tag f, :run_minutes %>
         </div>
         <div class="form-group col-md-6">
-          <%= label f, :run_seconds, class: "control-label" %>
-          <%= text_input f, :run_seconds, class: "form-control" %>
+          <%= text_input f, :run_seconds, class: "form-control", placeholder: "Seconds" %>
           <%= error_tag f, :run_seconds %>
         </div>
       </div>
