--- a/web/templates/workout/index.html.eex
+++ b/web/templates/workout/index.html.eex
@@ -1,17 +1,25 @@
-<div class="container">
-  <h2>Listing workouts</h2>
+<div class="section header-grey">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 thicker text-center">
+        <a href="<%= workout_path(@conn, :new) %>" class="large-link">Log a Workout</a>
+      </div>
+    </div>
+  </div>
+</div>
 
+<div class="container">
+  <h2>Your Workouts</h2>
   <table class="table">
     <thead>
       <tr>
         <th>Date</th>
         <th>Name</th>
-
         <th></th>
       </tr>
     </thead>
     <tbody>
-  <%= for workout <- @workouts do %>
+    <%= for workout <- @workouts do %>
       <tr>
         <td><%= workout.date %></td>
         <td><%= Trihard.Workout.name(workout) %></td>
@@ -22,9 +30,8 @@
           <%= link "Delete", to: workout_path(@conn, :delete, workout), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
         </td>
       </tr>
-  <% end %>
+    <% end %>
     </tbody>
   </table>
 
-  <%= link "New workout", to: workout_path(@conn, :new) %>
 </div>
